--- a/public/css/main.css
+++ b/public/css/main.css
@@ -509,7 +509,7 @@ pre,
   overflow: auto;
   margin: 20px 0;
   padding: 15px;
-  font-size: 13px;
+  font-size: 14px;
   color: #c5c8c6;
   background: #1d1f21;
   line-height: 1.6;
@@ -1457,6 +1457,18 @@ pre .javascript .function {
   height: auto;
   border: 2px solid #333;
   padding: 2px;
+  border-radius: 50%;
+  webkit-transition: 1.4s all;
+  moz-transition: 1.4s all;
+  ms-transition: 1.4s all;
+  transition: 1.4s all;
+}
+.site-author-image:hover {
+  background-color: #55dae1;
+  webkit-transform: rotate(360deg) scale(1.1);
+  moz-transform: rotate(360deg) scale(1.1);
+  ms-transform: rotate(360deg) scale(1.1);
+  transform: rotate(360deg) scale(1.1);
 }
 .site-author-name {
   margin: 5px 0 0;
@@ -1534,7 +1546,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #4f6fff;
+  background: #755c2a;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -2407,4 +2419,11 @@ hr {
     width: auto;
     text-align: center;
   }
+}
+.logo-line-before,
+.logo-line-after {
+  width: 100%;
+}
+.site-title {
+  color: #9d0;
 }
