--- a/themes/next/source/css/_common/components/highlight/highlight.styl
+++ b/themes/next/source/css/_common/components/highlight/highlight.styl
@@ -7,7 +7,7 @@ $code-block {
   overflow: auto;
   margin: 20px 0;
   padding: 15px;
-  font-size $code-font-size;
+  font-size 14px;
   color: $highlight-foreground;
   background: $highlight-background;
   line-height: $line-height-code-block;
