--- a/themes/next/source/css/_common/components/sidebar/sidebar-author.styl
+++ b/themes/next/source/css/_common/components/sidebar/sidebar-author.styl
@@ -5,8 +5,19 @@
   height: auto;
   border: 2px solid #333;
   padding: 2px;
+  border-radius: 50%;
+  webkit-transition: 1.4s all;
+  moz-transition: 1.4s all;
+  ms-transition: 1.4s all;
+  transition: 1.4s all;
 }
-
+.site-author-image:hover { 
+  background-color: #55DAE1 ;
+  webkit-transform: rotate(360deg) scale(1.1);
+  moz-transform: rotate(360deg) scale(1.1);
+  ms-transform: rotate(360deg) scale(1.1);
+  transform: rotate(360deg) scale(1.1);
+}
 .site-author-name {
   margin: 5px 0 0;
   color: $site-author-name-color;
