--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1546,7 +1546,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #884aa8;
+  background: #544f06;
 }
 .links-of-blogroll {
   font-size: 13px;
